--- a/ListaProduktow/ListaProduktow/MainPage.xaml
+++ b/ListaProduktow/ListaProduktow/MainPage.xaml
@@ -3,6 +3,24 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="ListaProduktow.MainPage">
 
-    
-
+    <StackLayout>
+        <StackLayout BackgroundColor="Black">
+            <StackLayout Orientation="Horizontal" HorizontalOptions="Center" Margin="0,10,0,0">
+                <Button Text="Dodaj"  TextColor="White" BackgroundColor="Green" Margin="10,0,0,0" Clicked="Dodaj_Clicked"/>
+                <Button Text="Edytuj"  TextColor="White" BackgroundColor="Blue" Margin="10,0,0,0" Clicked="Edytuj_Clicked"/>
+                <Button Text="Usun"  TextColor="White" BackgroundColor="Crimson" Margin="10,0,0,0" Clicked="Usun_Clicked"/>
+            </StackLayout>
+            <Grid Margin="0,0,0,10">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
+                <Label Text="Nazwa" FontSize="17" TextColor="White" Grid.Column="0" HorizontalTextAlignment="Center" />
+                <Label Text="Cena" FontSize="17" TextColor="White" Grid.Column="1" HorizontalTextAlignment="Center"/>
+                <Label Text="Ilość" FontSize="17" TextColor="White" Grid.Column="2" HorizontalTextAlignment="Center"/>
+            </Grid>
+        </StackLayout>
+        
+    </StackLayout>
 </ContentPage>
