--- a/ListaProduktow/ListaProduktow/MainPage.xaml
+++ b/ListaProduktow/ListaProduktow/MainPage.xaml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="ListaProduktow.MainPage">
+             x:Class="ListaProduktow.MainPage" NavigationPage.HasNavigationBar="False">
 
     <StackLayout>
         <StackLayout BackgroundColor="Black">
